# python-tf-module-starter

./: .gitignore  README.md  pyproject.toml
trexclitool/: __init__.py  __main__.py  requirements.txt
